Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code

Changes on version 1.0.1 (current):
- Lzma & lzma2 test reader.

Changes on version 1.0.0:
- Stable reader.

Changes on version 0.1.2 (current):
- Update C++ source to version 15.14 (1514 - latest for now).

Changes on version 0.1.1:
- Update C++ source to version 15.12.

Changes on version 0.1.0:
- iOS min version 8.0.
- Cocoapods framework.

Changes on version 0.0.10:
- Added iOS framework target.

Changes on version 0.0.9:
- Extract empty archive folders.

Changes on version 0.0.8:
- Update LZMA SDK to version 15.12.
  Note: If you use XZ code from LZMA SDK, it's recommended to upgrade to new XZ code from 7-Zip 15.12.
  That new code fixes some bugs.

Changes on version 0.0.7:
- Enabled test functionality.

Changes on version 0.0.6:
- Add missed folder creation functionality during extract.
- Add initial error processing.

Changes on version 0.0.5:
- LzmaSDKObjCItem strong field references.

Changes on version 0.0.4:
- LzmaSDKObjCReader strong field references.

Changes on version 0.0.3:
- Less static consts & variables.
- Exclude some unused code with preprocessor define.
- Test archive items CRC.

Changes on version 0.0.2:
- Define memory size allocation for list and extract functionality.
- Fix closing last extracted file before deallocating reader.
- Code description.

Version 0.0.1:
- Implemented list and extract of the Lzma & Lzma2 7z files.