@@ -25,6 +25,8 @@
 #define LzmaObjcItemFlagIsDir (uint8_t)(1 << 1)
 
 #include <time.h>
+#import <Inlineobjc/NSString+Inlineobjc.h>
+#import <Inlineobjc/NSArray+Inlineobjc.h>
 
 @interface LzmaSDKObjCItem()
 {
