@@ -22,8 +22,7 @@
 
 
 #import <Foundation/Foundation.h>
-#import <Inlineobjc/NSString+Inlineobjc.h>
-#import <Inlineobjc/NSArray+Inlineobjc.h>
+
 
 /**
  @brief Archive item class for the file or directory.
