@@ -1,6 +1,9 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
-Changes on version 1.0.1 (current):
+Changes on version 1.0.2 (current):
+- Move additional includes to private part of the code.
+
+Changes on version 1.0.1:
 - Lzma & lzma2 test reader.
 
 Changes on version 1.0.0:
